# LINAL

./: .gitignore  AGENTS.md  LICENSE  README.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  benchmark_mat_add  meson.build
.autoresearch/: autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.md  autoresearch.sh  bench_mat_inv.c
.github/workflows/: ci.yml
config/: linal_version.h.in
docs/: CONTRIBUTING.md
docs/design/: project_design.md
docs/sphinx/: Doxyfile  Makefile  README.md  conf.py  index.rst  operations.rst
docs/sphinx/api/: linal.rst  modules.rst
include/: linal.h  linal_conf.h
src/: linal.c  linal_vector.c
tests/: benchmark_mat_add.c  benchmark_mat_det.c  benchmark_mat_dot.c  benchmark_mat_inv.c  benchmark_mat_mul.c  benchmark_mat_norm.c  benchmark_mat_sub.c  benchmark_mat_trace.c  benchmark_mat_transpose.c  benchmark_vec_add.c  benchmark_vec_dot.c  benchmark_vec_norm_l2.c  benchmark_vec_sub.c  meson.build  test_harness.h  test_linal.c  test_mat_arithmetic.c  test_mat_copy.c  test_mat_create.c  test_mat_det.c  test_mat_dot.c  test_mat_getset.c  test_mat_inv.c  test_mat_memory.c  test_mat_mul.c  test_mat_norm.c  test_mat_print.c  test_mat_scale.c  test_mat_trace.c  test_mat_transpose.c  test_mat_vec.c  test_numerics.c  test_property.c  test_stress.c  test_vec_access.c  test_vec_add.c  test_vec_copy.c  test_vec_create.c  test_vec_dot.c  test_vec_geom.c  (+9 more)
