# Test executables for each module
test_mat_create = executable(
  'test_mat_create',
  files('test_mat_create.c'),
  dependencies: [linal_dep],
  include_directories: [public_headers, generated_headers],
)

test_mat_memory = executable(
  'test_mat_memory',
  files('test_mat_memory.c'),
  dependencies: [linal_dep],
  include_directories: [public_headers, generated_headers],
)

test_mat_arithmetic = executable(
  'test_mat_arithmetic',
  files('test_mat_arithmetic.c'),
  dependencies: [linal_dep],
  include_directories: [public_headers, generated_headers],
)

test_mat_mul = executable(
  'test_mat_mul',
  files('test_mat_mul.c'),
  dependencies: [linal_dep],
  include_directories: [public_headers, generated_headers],
)

test_mat_scale = executable(
  'test_mat_scale',
  files('test_mat_scale.c'),
  dependencies: [linal_dep],
  include_directories: [public_headers, generated_headers],
)

test_mat_transpose = executable(
  'test_mat_transpose',
  files('test_mat_transpose.c'),
  dependencies: [linal_dep],
  include_directories: [public_headers, generated_headers],
)

test_mat_getset = executable(
  'test_mat_getset',
  files('test_mat_getset.c'),
  dependencies: [linal_dep],
  include_directories: [public_headers, generated_headers],
)

test_mat_print = executable(
  'test_mat_print',
  files('test_mat_print.c'),
  dependencies: [linal_dep],
  include_directories: [public_headers, generated_headers],
)

test_mat_norm = executable(
  'test_mat_norm',
  files('test_mat_norm.c'),
  dependencies: [linal_dep],
  include_directories: [public_headers, generated_headers],
)

test_mat_trace = executable(
  'test_mat_trace',
  files('test_mat_trace.c'),
  dependencies: [linal_dep],
  include_directories: [public_headers, generated_headers],
)

test_mat_dot = executable(
  'test_mat_dot',
  files('test_mat_dot.c'),
  dependencies: [linal_dep],
  include_directories: [public_headers, generated_headers],
)

test_mat_det = executable(
  'test_mat_det',
  files('test_mat_det.c'),
  dependencies: [linal_dep],
  include_directories: [public_headers, generated_headers],
)

test_mat_inv = executable(
  'test_mat_inv',
  files('test_mat_inv.c'),
  dependencies: [linal_dep],
  include_directories: [public_headers, generated_headers],
)

test_stress = executable(
  'test_stress',
  files('test_stress.c'),
  dependencies: [linal_dep],
  include_directories: [public_headers, generated_headers],
)

# Run all tests
test('mat_create', test_mat_create)
test('mat_memory', test_mat_memory)
test('mat_arithmetic', test_mat_arithmetic)
test('mat_mul', test_mat_mul)
test('mat_scale', test_mat_scale)
test('mat_transpose', test_mat_transpose)
test('mat_getset', test_mat_getset)
test('mat_print', test_mat_print)
test('mat_norm', test_mat_norm)
test('mat_trace', test_mat_trace)
test('mat_dot', test_mat_dot)
test('mat_det', test_mat_det)
test('mat_inv', test_mat_inv)
test('stress', test_stress)
